fix SwaggerConfig